<resources>
    <string name="app_name">Calculadora</string>
    <string name="opcao_limpa">C</string>
    <string name="opcao_inverte">+/-</string>
    <string name="operador_adicao">+</string>
    <string name="operador_subtracao">-</string>
    <string name="operador_multiplicacao">x</string>
    <string name="operador_divisao">/</string>
    <string name="operador_igual">=</string>
    <string name="numero_virgula">,</string>
    <string name="numero_um">1</string>
    <string name="numero_dois">2</string>
    <string name="numero_tres">3</string>
    <string name="numero_quatro">4</string>
    <string name="numero_cinco">5</string>
    <string name="numero_seis">6</string>
    <string name="numero_sete">7</string>
    <string name="numero_oito">8</string>
    <string name="numero_nove">9</string>
    <string name="numero_zero">0</string>
</resources>