<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/result_background"
        android:fontFamily="sans-serif"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_null"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/numero"
        android:enabled="false"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_dividido"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btn_dividido"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/operador"
        android:text="@string/operador_divisao"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btn_vezes"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/operador"
        android:text="@string/operador_multiplicacao"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dividido" />

    <Button
        android:id="@+id/btn_igual"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/operador"
        android:text="@string/operador_igual"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mais" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/numero"
        android:text="@string/numero_zero"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_virgula"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_inverte"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/opcao"
        android:text="@string/opcao_inverte"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_null"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/numero"
        android:text="@string/numero_oito"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_9"
        app:layout_constraintTop_toBottomOf="@+id/btn_inverte" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/numero"
        android:text="@string/numero_cinco"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_6"
        app:layout_constraintTop_toBottomOf="@+id/btn_8" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/numero"
        android:text="@string/numero_dois"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_3"
        app:layout_constraintTop_toBottomOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_virgula"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/numero"
        android:text="@string/numero_virgula"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_igual"
        app:layout_constraintTop_toBottomOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/numero"
        android:text="@string/numero_nove"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_vezes"
        app:layout_constraintTop_toBottomOf="@+id/btn_null" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/numero"
        android:text="@string/numero_seis"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_menos"
        app:layout_constraintTop_toBottomOf="@+id/btn_9" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/numero"
        android:text="@string/numero_tres"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_mais"
        app:layout_constraintTop_toBottomOf="@+id/btn_6" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/numero"
        android:text="@string/numero_um"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_limpa"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/opcao"
        android:text="@string/opcao_limpa"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_inverte"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/numero"
        android:text="@string/numero_sete"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_8"
        app:layout_constraintTop_toBottomOf="@+id/btn_limpa" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/numero"
        android:text="@string/numero_quatro"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_5"
        app:layout_constraintTop_toBottomOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_mais"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/operador"
        android:text="@string/operador_adicao"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menos" />

    <Button
        android:id="@+id/btn_menos"
        android:layout_width="98dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/operador"
        android:text="@string/operador_subtracao"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_vezes" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="120dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>